<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_disconnected"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/print"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="8dp"/>

     <Button
         android:id="@+id/btnStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Status"
         android:layout_marginTop="8dp"/>

</LinearLayout>
